[gd_scene load_steps=3 format=3 uid="uid://c2y1v7bbphs46"]

[ext_resource type="Script" uid="uid://cxjm6qrlkogyv" path="res://scenes/shop/ShopItemUI.gd" id="1_b06mc"]
[ext_resource type="Texture2D" uid="uid://dnip28myu7q4x" path="res://art/icons/7.png" id="2_elsfu"]

[node name="ShopItemUI" type="PanelContainer"]
custom_minimum_size = Vector2(220, 300)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_b06mc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ItemContent" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PriceLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
bbcode_enabled = true
text = "Cena:100"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_elsfu")

[node name="SaleLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.966161, 0.757655, 1.15514e-06, 1)
text = "Sleva!"

[node name="BuyButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Koupit"
